[metadata]
name = requestChecker
# version = attr: src.VERSION
url = https://github.com/vincauddu29/phypster
description = "Module for check if request is allowed"
long_description = file: README.md
keywords = flask, security, url
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages=find:
include_package_data = true

[options.packages.find]
where=src